--- a/Explore/Github_Project/.m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.json
+++ b/Explore/Github_Project/.m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "2M2BQqPwfrzbYhu9DJSJeQ",
-    "name" : "Mapping17",
+    "name" : "m01_Use_Claire_Recommendations_To_Design_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
       "modelVersion" : {
@@ -23,7 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
-  "updateTime" : "2025-09-16T12:36:57.558Z",
+  "updateTime" : "2025-09-18T06:49:23.190Z",
   "objectRefs" : [ {
     "id" : "0Sw3SLh6nUHiF4mwnzFrKS",
     "name" : "DG_DEMO",
