--- a/Explore/Github_Project/m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.vc.json
+++ b/Explore/Github_Project/m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.vc.json
@@ -3,7 +3,7 @@
     "allowMaxFieldLength" : "false",
     "bigIntConvertType" : "ONLY_BIGINT",
     "documentType" : "MAPPING",
-    "name" : "Mapping17",
+    "name" : "m01_Use_Claire_Recommendations_To_Design_Mapping",
     "specialCharacterSupport" : "false",
     "links" : [
       {
@@ -1608,5 +1608,5 @@
       }
     ]
   },
-  "vcsExportTime" : "2025-09-16 15:36:57 TRT"
+  "vcsExportTime" : "2025-09-18 09:49:23 TRT"
 }
