--- a/Explore/Github_Project/m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.vc.json
+++ b/Explore/Github_Project/m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.vc.json
@@ -19,11 +19,8 @@
         "groupLink" : "DefaultGroup -> Master"
       },
       {
-        "link" : "RecommendedDataMasking -> Expression",
+        "link" : "RecommendedDataMasking -> Target",
         "groupLink" : "OutputGroup -> DefaultGroup"
-      },
-      {
-        "link" : "Expression -> Target"
       }
     ],
     "transformations" : [
@@ -1580,33 +1577,8 @@
             "rightOperand" : "CUSTOMER_ID"
           }
         ]
-      },
-      {
-        "createTime" : "2025-09-16T12:36:23.218Z",
-        "name" : "Expression",
-        "groups" : [
-          {
-            "input" : "true",
-            "name" : "DefaultGroup",
-            "output" : "true",
-            "rules" : [
-              {
-                "bulkRename" : "false",
-                "include" : "true"
-              }
-            ]
-          }
-        ],
-        "windowConfigurationEnabled" : "false",
-        "windowSpec" : {
-          "allRowsFollowing" : "false",
-          "allRowsPreceding" : "false",
-          "endOffset" : 0,
-          "startOffset" : 0,
-          "partitionKeys" : null
-        }
       }
     ]
   },
-  "vcsExportTime" : "2025-09-18 09:49:23 TRT"
+  "vcsExportTime" : "2025-09-18 10:34:35 TRT"
 }
