--- a/Explore/Cloud Data Integration Github_Project/m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.vc.json
+++ b/Explore/Cloud Data Integration Github_Project/m01_Use_Claire_Recommendations_To_Design_Mapping.DTEMPLATE.vc.json
@@ -19,7 +19,10 @@
         "groupLink" : "DefaultGroup -> Master"
       },
       {
-        "link" : "RecommendedDataMasking -> Target",
+        "link" : "Expression -> Target"
+      },
+      {
+        "link" : "RecommendedDataMasking -> Expression",
         "groupLink" : "OutputGroup -> DefaultGroup"
       }
     ],
@@ -1577,8 +1580,34 @@
             "rightOperand" : "CUSTOMER_ID"
           }
         ]
+      },
+      {
+        "description" : "test",
+        "createTime" : "2025-09-23T06:29:20.885Z",
+        "name" : "Expression",
+        "groups" : [
+          {
+            "input" : "true",
+            "name" : "DefaultGroup",
+            "output" : "true",
+            "rules" : [
+              {
+                "bulkRename" : "false",
+                "include" : "true"
+              }
+            ]
+          }
+        ],
+        "windowConfigurationEnabled" : "false",
+        "windowSpec" : {
+          "allRowsFollowing" : "false",
+          "allRowsPreceding" : "false",
+          "endOffset" : 0,
+          "startOffset" : 0,
+          "partitionKeys" : null
+        }
       }
     ]
   },
-  "vcsExportTime" : "2025-09-23 09:27:00 TRT"
+  "vcsExportTime" : "2025-09-23 09:30:41 TRT"
 }
